--- a/content/report/110_kmom01.md
+++ b/content/report/110_kmom01.md
@@ -1,6 +1,16 @@
 Kmom01
 ===============================
 
-Report for kmom01.
+Redovisning för kmom01.
 
-Kommer skriva en massa här...
+Här kommer jag skriva redovisningstext för kmom01!
+
+#### Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser? Om ja, vilka ramverk/språk har du jobbat med?
+
+#### Det blev en del nya verktyg i labbmiljön, var de nya för dig eller kände du igen dem?
+
+#### Hur kändes det att jobba med Anax Flat och bygga din me-sida?
+
+#### Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarthet för webben?
+
+#### Det fanns videor som kompletterade artiklarna, hjälpte de dig att förstå materialet bättre?
