Report for kmom01

--- a/content/report/110_kmom01.md
+++ b/content/report/110_kmom01.md
@@ -3,14 +3,17 @@ Kmom01
 
 Redovisning för kmom01.
 
-Här kommer jag skriva redovisningstext för kmom01!
-
 #### Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser? Om ja, vilka ramverk/språk har du jobbat med?
+Nej. Detta är helt nytt för mig.
 
 #### Det blev en del nya verktyg i labbmiljön, var de nya för dig eller kände du igen dem?
+Visst var det en hel del nya verktyg. De flesta hade jag använt tidigare, men några var nya för mig. Git hade jag installerat tidigare, men jag blev nu tvungen att i config-filen berätta vem jag var. Composer var nytt för mig, likaså Make, Node och npm. Att installera Yaml krånglade en del, och jag fick ta hjälp av praktiskt taget alla tips som fanns i forumet.
 
 #### Hur kändes det att jobba med Anax Flat och bygga din me-sida?
+Det kändes bra. Att få grunden på plats kändes ganska enkelt. Tycker också att hela filstrukturen känns bra och lätt att hitta i. Sen är det såklart mycket nytt, så det känns inte som att man har lärt sig så mycket än.
 
-#### Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarthet för webben?
+#### Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarhet för webben?
+Nej, inte medvetet i alla fall. Däremot så kan jag haja till om någon sida är konstigt byggd på något vis. Speciellt betal-delen i webb-butiker kan jag ibland tycka är väldigt konstig och ologisk. Såna delar är ju ofta externa leverantörer, så stil och logik brukar sällan hänga ihop med webbshopen/webbsidan man kommer ifrån. Där tror jag att det finns mycket förbättringsarbete att göra.
 
 #### Det fanns videor som kompletterade artiklarna, hjälpte de dig att förstå materialet bättre?
+Ja, jag gillar dessa videor. Man får där höra en del saker som man skulle missa annars, om man bara läste artiklarna.
