--- a/content/report/110_kmom01.md
+++ b/content/report/110_kmom01.md
@@ -1,3 +1,14 @@
+---
+views:
+    byline:
+        region: after-main
+        template: default/content
+        sort: 1
+        data:
+            meta:
+                type: content
+                route: block/byline
+...
 Kmom01
 ===============================
 
