Added report kmom02

--- a/content/report/120_kmom02.md
+++ b/content/report/120_kmom02.md
@@ -12,4 +12,20 @@ views:
 Kmom02
 ===============================
 
-Report for kmom02.
+Redovisning för kmom02.
+
+I och med detta kursmomentet så känns det som att vi verkligen börjat komma nånstans med designen. Just att styla sidorna, och att få det att se snyggt ut är det som jag tyckt varit svårast hittills i tidigare kurser. Ramverket ger förstås mycket, och jag tycker det är riktigt kul att jobba med den responsiva delen.
+
+Jag tycker Report-sidan är lite rörig med breadcrumb, next-previous ggr 2 och table of contents, men jag fann inget bra sätt att ändra det på. Jag får fundera på det till nästa kmom. 
+
+#### Vad tycker du om LESS så här långt, och det sättet vi jobbar med LESS-moduler i vårt tema?
+Jag tycker det verkar bra. Känns som att man skapar bra ordning när css-koden växer och blir väldigt stor. Jag anammade även att använda variabler för t.ex. färgsättning. Då slipper man missa ändra nånstans om färg-koden finns på flera ställen.
+
+#### Hur kändes det att kompilera LESS till CSS, var det något du reflekterade över?
+Kändes visserligen som ett extra steg för att kontrollera/testa en ändring, men samtidigt tror jag att jag därför blir bättre med att använda "inspektera element" i webbläsaren, och utföra mina css-tester där. I stort tycker jag det fungerar bra.
+
+#### Har du varit bekant med Makefiler och make sedan tidigare, eller något liknande byggverktyg? Vad tycker du om make så här långt?
+Nej, jag är helt ny på det här med byggverktyg. Funkar bra, men har inte greppat alla targets helt än. Behöver nog en "make for dummies".
+
+#### Fann du nytta i de videor som var kopplade till detta kursmoment?
+Ja, verkligen! Jag har kollat igenom dom (vissa flera gånger), och de gav mig mycket.
