--- a/content/report/130_kmom03.md
+++ b/content/report/130_kmom03.md
@@ -13,3 +13,19 @@ Kmom03
 ===============================
 
 Report for kmom03.
+
+
+#### Hur känns det att vara styrd till ett vertikalt grid, hämmande eller stödjande?
+Jag tycker det känns bra! Som att man har något att förhålla sig till. Jag tror dock det krävs en hel del träning för att få en känsla för hur många kolumner man ska använda. Det beror nog mycket på vad man bygger för design/sida.
+
+#### Hur känns det att jobba med ett typografiskt horisontellt/baseline grid, ser du någon poäng med det?
+Visst ser jag en poäng med det, på samma sätt som med ett vertikalt grid. Man får något att förhålla sig till. Jag ser dock större vinster med det vertikala än med det horisontella. Att arbeta med det typografiska kändes just nu mest jobbigt, främst för att det tog en bra stund att inse att jag inte hade aktiverat det. Att sen klura ut hur man gjorde det gick okej. När jag har linjer att förhålla mig till så kommer perfektionisten fram, och jag vill egentligen att allt ska ligga perfekt på linjerna. Bra att det står i instruktionen att det räcker med "någorlunda väl" matchning. Jag behöver nog jobba mer med detta innan jag känner mig bekväm med det.
+
+#### Har du jobbat med liknande layouttekniker sedan tidigare?
+Nej, aldrig. Idéerna kring layout var intressant att läsa om.
+
+#### Du börjar se hur man kan jobba med LESS, kommentarer på det?
+Ja! Jag är inte nöjd med hur mina less-filer är ordnade just nu. När vi tog bort regions.less så tappade jag en del grund-style som kanske borde legat i style.less. Nu flyttade jag över dom dit, så det blev en oordnad slasktratt med bara några få saker. Om jag skulle börja från början så skulle jag nog försöka tänka till lite mer och få en bättre struktur. Var sak på sin plats helt enkelt. Eventuellt ha en less-fil för varje region (flash, main mm).
+
+#### Hur uppfattade du nivån på detta kmom? Svårt, lagom, många nya begrepp?
+Det korta svaret är att jag tyckte det var mycket svårt! Det lite längre svaret är, att när man får en modell att följa, färdig kod som någon annan skrivit, så blir det krångligt och svårt att ta till sig allt, och att förstå helt hur det funkar. Missar man som jag en del i att aktivera gridet, så funkar inget somn det ska, och det blir bara en massa felsökning. Dock så är ju just det en stor del av programmeringen, så jag tycker principiellt inte att det är fel i att svårigheten ligger däri. För att lära ut grid och design så hade vi ju kunnat skriva egen kod, men då hade vi missat det som jag nu tyckte var svårt. 
