--- a/content/report/150_kmom05.md
+++ b/content/report/150_kmom05.md
@@ -13,3 +13,20 @@ Kmom05
 ===============================
 
 Report for kmom05.
+
+
+
+
+#### Berätta kort om erfarenheterna med din undersökning av webbplatsers laddningstid.
+Jag kommer att tänka på två saker, först att vad som räknas som snabbt beror på vilket innehåll som ska laddas in. Om det är väldigt lite innehåll som tar 3 sekunder att ladda så tycker man att det är långsamt, medans en sida med tungt innehåll som tar tre sekunder att ladda upplevs som snabb. Upplevelsen av snabbhet beror nog också mycket på renderingen av synligt innehåll, om det görs först eller sist under laddningstiden.
+
+Det andra jag tänker på är mitt exempel med turfgame.com där sidan, med jämna intervall på kanske ett par sekunder, gör anrop till ett api för att uppdatera listor och positioner på karta. Det gör det svårt att säga när sidan laddat klart, eftersom det hela tiden laddas in nya förfrågningar.
+
+#### Har du några funderingar kring Cimage och dess nytta och features?
+Jag tycker det är ett bra verktyg, även om det nog krävs en hel del övning för att lära sig använda det fullt ut. Tyckte dock de delar som jag använde mig av var enkla och lättförståeliga. Det låter smart att processa bilderna på servern innan klienten laddar bilderna.
+
+#### Lyckades du uppnå ett bra sätt och en LESS-struktur för att jobba med dina bilder i webbplatsen?
+Jag tror det iaf. Jag kopierade figure.less som fanns tillgänglig, och som bland annat hanterar responsiviteten. Sen skapade jag även en blogg.less för att t.ex. få ordning på radavstånd i just bloggen. Båda dessa filer importerar jag i filen modules.less.
+
+#### I extrauppgiften om picture, srcset och sizes, fick du någon känsla för för- och nackdelar med konceptet?
+Då jag ligger en dryg vecka efter så skippar jag extrauppgiften den här gången. Ny vecka, nya tag! 
