--- a/content/report/140_kmom04.md
+++ b/content/report/140_kmom04.md
@@ -13,3 +13,18 @@ Kmom04
 ===============================
 
 Report for kmom04.
+
+#### Hur känner du inför färger och webbplatser? Föredrar du något särskilt ljust, mörkt, färgglatt?
+Först och främst tycker jag just den mjuka delen av detta är inte helt enkelt. Att titta på en hemsida och tycka att färgerna är bra eller dåliga är inte så svårt, men att säga VARFÖR är desto knepigare. Själv föredrar jag nog ljusa nedtonade färger. Inget utmärkande eller skrikigt.
+
+#### Har du funderat på hur webbplatsers färgskala och färgsättning påverkar besökarens känsla av webbplatsen? Bidrar val av typsnitt till den känslan?
+Hur färgskala och färgsättning påverkar märks väldigt tydligt när den som satt färgen har misslyckats. Fokus dras från innehållet, till den dåliga designen och färgsättningen. Precis motsatt mot vad man som ägare av webbsidan vill. Bra färgsättning påverkar helt säkert på något vis, men det har jag inte funderat allt för mycket på. Kanske ökar chansen att besökaren återkommer? Valet av typsnitt bidrar definitivt till känslan av webbplatsen!
+
+#### Hur känns din LESS-struktur så här långt?
+Inte alls helt optimal. Jag funderade på att skriva om en hel del saker, för att lättare kunna välja vad jag plockar in eller inte i ett tema. Dock så hade jag andra större problem att brottas med, så jag avvaktade med att strukturera upp.
+
+#### Hur valde du att göra med ditt eget default tema?
+Jag tog den stylen som jag har använt på min sida tidigare i kursen. Jag gjorde dock ändå en egen less-fil till default-temat för att hålla ordning när antalet filer ökade.
+
+#### Var det något särskilt som du uppfattade som utmanande i detta kmom?
+Till en början så tyckte jag det var lite oklart hur temaväljaren fungerade, vilken kod i vilken fil som gör vad. Det tar lite tid att klura ut och förstå. Även om det är lite besvärligt att traggla sig framåt och försöka förstå genom att läsa kod och testa, så är det jättenyttigt och utvecklande. Sen hade jag ett stort problem som tog fokus från själva uppgiften, nämligen att min rm-navbar försvann när jag valde ett annat tema än mitt default tema. Jag fick klura och testa länge för att få ordning på det. Problemet var bara att vid val av tema så nollades vilka stylesheets som användes, och då försvann Font Awesome som behövdes för rm-navbaren. Jag la till den i alla val i theme-selector.php och fick därmed ordning på problemet.
