--- a/content/report/160_kmom06.md
+++ b/content/report/160_kmom06.md
@@ -13,3 +13,17 @@ Kmom06
 ===============================
 
 Report for kmom06.
+
+Uppgifterna i detta kmom var lite småkluriga. Att klistra på en design-idé på sin befintliga sida var inte helt självklart, men gick ganska bra ändå. I sista uppgiften testade jag att styla efter class som läggs på html-elementet och bara koda i en less-fil, istället för att göra en less-fil per tema som jag gjort tidigare. 
+
+#### Hur känns det att tänka i termer av designprinciper?
+Det känns vettigt. Mycket smartare att ha en plan som man följer, än att bara hasta ihop något. Sen tycker jag det är svårt att omsätta det i en klar produkt. Förmodligen en övningssak.
+
+#### Fick du en känsla av att design element kan vara ett sätt att med mindre medel påverka en design, eller hur upplevde du det?
+Ja! En bra design med css känns bra mycket enklare (mindre medel) än att t.ex. skapa designen med rätt foton som ska tas.
+
+#### Har du själv en uppfattning om “the final touch” och vad det kan vara i sammanhanget webbdesign?
+Jag har väl åtminstone några tankar om det. Jag tänker att "the final touch" kan vara smådetaljer som skuggor, rundade hörn eller liknande. Små saker som besökaren kanske inte direkt tänker på, men som i det stora hela gör mycket för designen.
+
+#### Har du under kursen skapat dig en känsla för begreppen god design och vad som är subjektivt och objektivt inom det området?
+Till en viss del ja. Men jag tänker också att god design kan överexponeras och bli dålig design. Ett exempel, att på sin sida ha ett par bilder som roteras och ges en ram kan vara mycket god design. Men att göra det på ett stort antal bilder, som i ett fotoalbum, känns som mycket dålig design. Där vill man istället hålla det enkelt, tydligt, ordning och reda.
