--- a/content/report/170_kmom10.md
+++ b/content/report/170_kmom10.md
@@ -13,3 +13,32 @@ Kmom10
 ===============================
 
 Report for kmom10.
+
+
+## 1.1. För varje krav jag implementerat
+
+#### Uppdrag 1: Analys usability
+Här har jag valt 4 hemsidor som jag känner till skapligt, och där man som besökare kan utföra något mer än att bara läsa text. Jag har följt de fem komponenterna som fanns i artikeln som ingick i uppgiften. För varje komponent har jag gjort en skala med 1 till 4 poäng, där 4 poäng är bäst. Som exempel så är skalan för Learnability följande:  
+1. poäng: Användaren lyckas inte alls  
+2. poäng: Användaren får leta och utför med svårighet  
+3. poäng: Användaren hittar direkt men utför med svårighet eller får leta men utför med lätthet  
+4. poäng: Användaren hittar direkt och utför med lätthet  
+För varje hemsida testar jag 2 eller 3 moment, och sen tar jag medelvärdet av testen. De sidor jag testat är maps.google.se, tv.nu, eniro.se och ica.se. Resultatet av analysen går att läsa på min me-sida.
+
+#### Uppdrag 3: Webbplats
+När jag skulle skapa en ny webbplats så valde jag att använda mig av en helt ny installation av Anax Flat. Detta för att inte få med mig en massa inställningar och filer som 'skräp', men också för att jag ville testa på att göra allt från grunden igen. Repetition på detta sättet tycker jag är väldigt bra för inlärningen. Jag valde att bygga åt kund nr 1, som är ett företag vid namn 'CHIC' som jobbar åt mycket viktiga personer (kungligheter, adliga m.fl.) med inredning, byggnation och restaurering. Företaget jobbar över hela världen, så hemsidan är gjord helt på engelska. Eftersom företaget vill vara lättillgängliga så har dom valt att ha en kontakt-ruta på förstasidan, tillsammans med lite kortfattad text om företaget. Förstasidan länkar även till den utökade kontakt-sidan, och till bloggen. Dessa länkar finns såklart även i headern under 'Blog' och 'About'. About-sidan innehåller även några andra undersidor. I headern hittar vi även företagets logotype och en favicon. Samma favicon används även i webbläsarens flik. I flashregionen ligger en bild på slottet där företaget har sitt huvudkontor. I footern finns de standardfält som medföljer anax flat. Även där finns länk till kontakt-sidan. Företaget har levererat vissa texter och bilder för att få ett tillräckligt stort innehåll på sidan till lansering. Bilderna använder sig av Cimage, och snygga länkar används även. Självklart är sidan responsiv. I min about/contact-sida la jag in en karta från google via en iframe. Kul att testa lite nya saker, även om det inte direkt var någon stor utmaning.
+
+#### Uppdrag 4: Tema
+När jag tog tag i temat så började jag med temat som är anpassat till kunden, dvs custom-temat. Jag har använt mig av ett vertikalt grid på 12 kolumner, och ett horisontellt grid om 24 pixlar. Testsidor för griden finns under ?vgrid och ?hgrid. Custom-temat är i färgsättningen ljus med inslag av guld-gult och ett minimalt inslag av blått. Jag bygger volym i elementen med skuggor, och arbetar med mjuka former i t.ex. bilder. Custom-temat är det som visas när man tar går till sidan.  
+När det kommer till base-temat så tog jag less-filen från custom-temat och ändrade och kommenterade bort. Det gjorde att det blev väldigt enkelt att justera och ändra, då filen redan innehöll de flesta css-klasser jag kunde tänkas behöva. Det skulle härifrån vara relativt enkelt att skapa ytterligare teman. Base-temat har fått en annan font som är lättläst. Det har också fått lite annan färgsättning, och minimalt med styling. Jag tolkade det som att base-temat är till för mig som utvecklare för att ha en grund att stå på, och att custom-temat är till för kunden.  
+Dessa båda teman går att nå via länken Themes och därifrån vidare till temaväljaren.
+
+
+## 1.2. Allmänt stycke om projektet
+Överlag så tycker jag att projektet har gått skapligt bra. Jag har inte haft några stora problem under arbetets gång. De svårigheter som kan finnas tror jag att man tar sig igenom under de tidigare kursmomenten. Om jag ska finna några problem så tänker jag på att jag inte är så insatt i hur ramverket fungerar, och hur jag kan modifiera det. t.ex. så funderade jag på att ha en sidebar med en undermeny på förstasidan, men fick det inte att fungera med den content-struktur som redovisningssidan använder. Vidare så hittade jag inte hur jag fick till undermenyer i rm-menyn, trots att jag sett det i något exempel någonstans.  
+När det kommer till lösningar så var ett problem att sidan skulle vara bildrik. Det fick bli en rejäl promenad med kameran för att fixa foton. Till min kontakt-sida så lånade jag några bilder.  
+Det som varit svårt har varit tema och design. Jag tycker det är rejält krångligt att komma på en design som ska vara snygg. Ofta känns det som att man även bygger sin sida/design med bilder, och då gäller det ju att man har de rätta bilderna som krävs. Jag kan tänka mig att många företag som behöver en ny hemsida har många bilder på lager som passar företagets profil och design. Det skulle underlätta mycket.
+Något som gått skapligt lätt har varit css-stylingen. Jag tycker att jag börjar komma in i kodandet bra nu, har lärt mig vad många saker heter, och även om jag får googla mycket så vet jag nästan alltid direkt vad jag ska googla på. Jag tycker det har varit ett rimligt projekt för kursen.
+
+## 1.3. Om kursen
+Jag tycker kursen har varit bra. Lite utmanande med alla mjuka områden (ex färglära, typografi, design) som man kanske inte direkt kopplar ihop med en programmerare. Boken som vi använt tycker jag har varit helt okej, men jag har samtidigt inte något att jämföra med inom området. Youtube-filmerna tycker jag är mycket bra! En sak jag har funderat på är vilket ramverk vi använder. Jag är inte alls så insatt i ramverk generellt, men det finns väl några där ute, och varför använder vi just Anax Flat? Borde man använda något annat? Eller är det en fördel att använda något som lärarna är mycket insatta i? Bara några funderingar alltså. Sen kommer vi väl att arbeta mer med ramverk framöver, så det kanske klarnar mer då. Jag är klart nöjd med kursen, och skulle gärna rekommendera den till en vän. Jag har till och med tänkt på design ibland när jag varit ute i verkligheten. Kursen får betyget 7 av 10.
